# fusionsc

./: .dockerignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  LICENSE.txt  MANIFEST.in  README.md  build-docs.bat  build-docs.sh  build-python.bat  gold_fish.sln  goldfish.sln  pyproject.toml  setup.py  test.py
docs/: .buildinfo  .nojekyll  CMakeLists.txt  architecture.html  architecture.rst  class.rst.tpl  conf.py  dataspec.html  fsc-doxyfile.in  gendocs-doxyfile.in  genindex.html  index.html  index.rst  installation.html  installation.rst  license.html  objects.inv  overview.html  py-modindex.html  reference.html  reference.rst  roadmap.html  roadmap.rst  search.html  searchindex.js  setup.html  setup.rst
docs/_autosummary/: fusionsc.asnc.FiberPool.html  fusionsc.asnc.Future.html  fusionsc.asnc.html  fusionsc.backends.html  fusionsc.capnp.AnyBuilder.html  fusionsc.capnp.AnyCommon.html  fusionsc.capnp.AnyPointer.html  fusionsc.capnp.AnyReader.html  fusionsc.capnp.Builder.html  fusionsc.capnp.CallContext.html  fusionsc.capnp.CapabilityClient.html  fusionsc.capnp.CapabilityServer.html  fusionsc.capnp.Constant.html  fusionsc.capnp.Data.html  fusionsc.capnp.DataBuilder.html  fusionsc.capnp.DataReader.html  fusionsc.capnp.DataReaderOrBuilder.html  fusionsc.capnp.Enum.html  fusionsc.capnp.EnumSchema.html  fusionsc.capnp.FieldDescriptor.html  fusionsc.capnp.InterfaceSchema.html  fusionsc.capnp.List.html  fusionsc.capnp.ListBuilder.html  fusionsc.capnp.ListCommon.html  fusionsc.capnp.ListReader.html  fusionsc.capnp.ListSchema.html  fusionsc.capnp.Object.html  fusionsc.capnp.Reader.html  fusionsc.capnp.Schema.html  fusionsc.capnp.Struct.html  fusionsc.capnp.StructBuilder.html  fusionsc.capnp.StructPipeline.html  fusionsc.capnp.StructReader.html  fusionsc.capnp.StructSchema.Builder.html  fusionsc.capnp.StructSchema.Pipeline.html  fusionsc.capnp.StructSchema.Reader.html  fusionsc.capnp.StructSchema.html  fusionsc.capnp.Text.html  fusionsc.capnp.TextBuilder.html  fusionsc.capnp.TextReader.html  (+126 more)
docs/_sources/: architecture.rst.txt  dataspec.ipynb.txt  index.rst.txt  installation.rst.txt  overview.rst.txt  setup.ipynb.txt
docs/_sources/_autosummary/: fusionsc.asnc.FiberPool.rst.txt  fusionsc.asnc.Future.rst.txt  fusionsc.asnc.rst.txt  fusionsc.backends.rst.txt  fusionsc.capnp.AnyBuilder.rst.txt  fusionsc.capnp.AnyCommon.rst.txt  fusionsc.capnp.AnyPointer.rst.txt  fusionsc.capnp.AnyReader.rst.txt  fusionsc.capnp.Builder.rst.txt  fusionsc.capnp.CallContext.rst.txt  fusionsc.capnp.CapabilityClient.rst.txt  fusionsc.capnp.CapabilityServer.rst.txt  fusionsc.capnp.Constant.rst.txt  fusionsc.capnp.Data.rst.txt  fusionsc.capnp.DataBuilder.rst.txt  fusionsc.capnp.DataReader.rst.txt  fusionsc.capnp.DataReaderOrBuilder.rst.txt  fusionsc.capnp.Enum.rst.txt  fusionsc.capnp.EnumSchema.rst.txt  fusionsc.capnp.FieldDescriptor.rst.txt  fusionsc.capnp.InterfaceSchema.rst.txt  fusionsc.capnp.List.rst.txt  fusionsc.capnp.ListBuilder.rst.txt  fusionsc.capnp.ListCommon.rst.txt  fusionsc.capnp.ListReader.rst.txt  fusionsc.capnp.ListSchema.rst.txt  fusionsc.capnp.Object.rst.txt  fusionsc.capnp.Reader.rst.txt  fusionsc.capnp.Schema.rst.txt  fusionsc.capnp.Struct.rst.txt  fusionsc.capnp.StructBuilder.rst.txt  fusionsc.capnp.StructPipeline.rst.txt  fusionsc.capnp.StructReader.rst.txt  fusionsc.capnp.StructSchema.Builder.rst.txt  fusionsc.capnp.StructSchema.Pipeline.rst.txt  fusionsc.capnp.StructSchema.Reader.rst.txt  fusionsc.capnp.StructSchema.rst.txt  fusionsc.capnp.Text.rst.txt  fusionsc.capnp.TextBuilder.rst.txt  fusionsc.capnp.TextReader.rst.txt  (+126 more)
docs/_sources/howto/: CalculateIota.ipynb.txt  Client.ipynb.txt  Connection Length.ipynb.txt  Field Interpolation.ipynb.txt  Field Line Following.ipynb.txt  FieldAlign.ipynb.txt  JText.ipynb.txt  MappingGeometry.ipynb.txt  Poincare.ipynb.txt  Server.ipynb.txt  SphereField.ipynb.txt  W7X Current Scan.ipynb.txt  index.rst.txt
docs/_sources/modules/: index.rst.txt  structio.rst.txt
docs/howto/: CalculateIota.html  Client.html  Client.ipynb  ConLength.ipynb  Connection Length.html  Connection Length.ipynb  Field Interpolation.html  Field Line Following.html  FieldAlign.html  Heat Load Calculation.html  Heat Load Calculation.ipynb  JText.html  JText.ipynb  Mapping.html  Mapping.ipynb  MappingGeometry.html  Poincare.html  Poincare.ipynb  Server.html  Server.ipynb  SphereField.html  W7X Current Scan.html  W7X Current Scan.ipynb  index.html  index.rst
docs/modules/: index.html  structio.html
docs/templates/: summary-class.rst  summary-module.rst
src/c++/: CMakeLists.txt  tests_main.cpp
src/c++/capnp-sphinx/: CMakeLists.txt  capnp-sphinx.cpp
src/c++/capnpc-java/: CMakeLists.txt  capnp_gen_java.cmake  capnpc-java.c++
src/c++/cupnp/: CMakeLists.txt  cupnp-test.capnp  cupnp.h  cupnp_gen.cmake  cupnpc.cpp  gpu_defs.h  test.cpp
src/c++/fsc/: CMakeLists.txt  blob-store-tests.cpp  blob-store.cpp  blob-store.h  break.cpp  break.h  capi-lvn.cpp  capi-lvn.h  capi-store.h  commit-hash.h  common.cpp  common.h  compression.cpp  compression.h  cudata.cpp  cudata.h  data-inl.h  data-test.capnp  data-tests.cpp  data-viewer.cpp  data-viewer.h  data.c++  data.capnp  data.cpp  data.h  db-cache-tests.cpp  db-cache.cpp  db-cache.h  db-sqlite.cpp  db.cpp  db.h  device-gpulaunch.h  device-inl.h  device-kernels-biotsavart.h  device-kernels.cu  device-tensor.h  device-vector.h  device.cpp  device.h  doc-extras.h  (+170 more)
src/c++/pybindings/: CMakeLists.txt  assign.cpp  assign.h  async-inl.h  async.cpp  async.h  capnp-bind.cpp  capnp-impl.cpp  capnp-inl.h  capnp.cpp  capnp.h  data.cpp  data.h  devices.cpp  formats.cpp  formats.h  fsc-servepy.cpp  fsc-servepy.h  fscpy-inl.h  fscpy.cpp  fscpy.h  graphviz.cpp  graphviz.h  helpers.cpp  kj.cpp  kj.h  loader-interface-method.cpp  loader-make-types.cpp  loader.cpp  (+13 more)
src/docs/: .gitignore  CMakeLists.txt  capnp.rst  capnp_docs.py  capnp_parser.py  conf.py  fsc-doxyfile.in  gendocs-doxyfile.in  index.rst  installation.rst  javadoc.py  license.rst  overview.rst  package.rst.tpl  reference.rst  setup.ipynb  setup.rst
(+371 files in other folders)
