[build-system]
requires = [
  "setuptools>=42",
  "setuptools_scm[toml]>=6.2",
  "scikit-build",
  "cmake",
  "numpy==1.19.5 ; python_version < '3.10'",
  "numpy==1.23.4 ; python_version >= '3.10'",
  "ninja ; platform_system!='Windows'"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
local_scheme = "no-local-version"