[project]
dynamic = ["version"]

name = "fusionsc"
dependencies = [
	"typing-extensions >= 3.10",
	"numpy>=1.19.5 ; python_version < '3.10'",
	"numpy>=1.23.4 ; python_version >= '3.10'",
	"nest-asyncio",
	"netCDF4",
	"scipy"
]

[build-system]
requires = [
  "scikit-build-core",
  "setuptools_scm[toml]>=6.2",
  "numpy==1.19.5 ; python_version < '3.10'",
  "numpy==1.23.4 ; python_version >= '3.10'",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
sdist.exclude = [
	"examples",
	"util",
	"src/service/devices/w7x-resources/components.json",
	"src/service/devices/w7x-resources/compile-index.py"
]

cmake.targets = ["fsc-skbuild-target"]
cmake.build-type = "Release"
install.components = ["SKBUILD"]
wheel.packages = ["src/python/fusionsc"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
local_scheme = "no-local-version"