[project]
dynamic = ["version"]

name = "fusionsc"
dependencies = [
	"typing-extensions >= 3.10",
	"importlib_resources",
	"numpy>=1.19.5, <2 ; python_version < '3.10'",
	"numpy>=1.23.4, <2 ; python_version >= '3.10' and python_version < '3.12'",
	"numpy>=1.26.2, <2 ; python_version >= '3.12'",
	"nest-asyncio",
	"netCDF4",
	"scipy"
]

[project.scripts]
fusionsc-config = "fusionsc.config:configCli"

[build-system]
requires = [
  "scikit-build-core",
  "setuptools_scm[toml]>=6.2",
  "numpy==1.19.5 ; python_version < '3.10'",
  "numpy==1.23.4 ; python_version >= '3.10' and python_version < '3.12'",
  "numpy==1.26.2 ; python_version >= '3.12'",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
sdist.exclude = [
	"/examples/",
	"/util/",
	"/src/python/fusionsc/serviceDefs/fusionsc/devices/w7x-resources/components.json",
	"/src/python/fusionsc/serviceDefs/fusionsc/devices/w7x-resources/compile-index.py"
]

cmake.targets = ["fsc-skbuild-target"]
cmake.build-type = "Release"
install.components = ["SKBUILD"]
wheel.packages = ["src/python/fusionsc"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
local_scheme = "no-local-version"